--- a/app/views/merchants/index.html.erb
+++ b/app/views/merchants/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Merchants<h1>
+<h1>Merchants</h1>
 
 <% @merchants.each do |merchant| %>
   <p><%= link_to "#{merchant[:attributes][:name]}", merchant_path(merchant), method: :get %></p>
